--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 ---
 
 layout: wrapper
-permalink: /projects/
+permalink: /reflections/
 
 ---
 
-{% include projects.html%}
+{% include reflections.html%}
