--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 ---
 
 layout: wrapper
-permalink: /reflections/
+permalink: /projects/
 
 ---
 
-{% include reflections.html%}
+{% include projects.html%}
